final draft of styling editwarehouse, will need to fix some minor header aligning issues at the end

--- a/src/components/EditWarehouseForm/EditWarehouseForm.scss
+++ b/src/components/EditWarehouseForm/EditWarehouseForm.scss
@@ -42,7 +42,7 @@
         }
 
         @include desktop{
-            font-size:2rem;
+            font-size:1.5rem;
         }
     }
 
